--- a/abstract.tex
+++ b/abstract.tex
@@ -6,4 +6,4 @@ Subsequently, a semantic retrieval module is proposed and used to search for all
 The Recall@k along with the normalized Discounted Cumulative Gain (nDCG) metric was used to measure the overall performance of the proposed retrieval engine. Along with that, the performance of the proposed method was also measured in terms of retrieval speed. From the experimental evaluations, the results shows promising results for the retrieval module in terms of precision, ranking of results as well as retrieval time. As such, the retrieval module could benefit the deep learning research field when used as a semi-supervised ground truth annotation tool.
 
 
-\keywords{Vehicle Semantic Extraction, Retrieval Systems, Carpark Surveillance}
+%\keywords{Vehicle Semantic Extraction, Retrieval Systems, Carpark Surveillance}
