--- a/thesis.tex
+++ b/thesis.tex
@@ -11,7 +11,7 @@
 \usepackage[table,xcdraw]{xcolor}
 % -------------------------------------------------------------------
 
-\usepackage[x11names,dvipsnames,svgnames]{xcolor}
+%\usepackage[x11names,dvipsnames,svgnames]{xcolor}
 \usepackage[os=win]{menukeys}
 \usepackage{listings}
 \lstset{language=[LaTeX]TeX,columns=fullflexible,
