--- a/3framework-overview.tex
+++ b/3framework-overview.tex
@@ -121,7 +121,7 @@ The aforementioned setup was done to mimic a typical camera setup which tower ov
 \end{figure}
 
 
-\begin{figure}[hbt!]\centering
+\begin{figure}[!hbt]\centering
 \includegraphics[width=.7\textwidth]{image/general/grids.png}
 \caption{View from camera setup; 20$\times$20 Grids}
 \label{fig:viewfromcamera}
