just making sure its the latest document

--- a/1introduction.tex
+++ b/1introduction.tex
@@ -5,7 +5,9 @@ The use of video based surveillance system has exploded over the past decade. Th
 \label{section:introduction}
 %In this work, the author takes on a journey to explore this new research territory of utilizing video based surveillance footage for 
 
-Traditionally, the process of finding a particular video from a huge collection is done manually. This process involves an inquirer who is looking for a particular scene or shot, and an person-in-charge who manages the CCTV video collection. In a carpark scenario, the inquirer would typically need to provide information such as time, date, color of the vehicle, vehicle registration number, and place of which an incident occurred. 
+With a constant stream of hundreds of thousands of hours worth of  video data filling up database warehouses across the globe by the second, the commercial sector has seen a bloom of various video search engines such as the Google, Youtube, Dailymotion which were made available for public. All of which implements the same underlying concept, first the process begins with extraction of video metadata such as title, description, filename, dates, subtitles and even tags. Next, these videos are stored in the database along with these metadata which is used during the retrieval process. Finally, these video shots are retrieved based on a text-based query and sorted for the end users. 
+
+However, this approach can not be directly applied towards surveillance video footage as the metadata such as title, description or even tags does not exist. Traditionally, the process of finding a particular video from a huge collection is done manually. This process involves an inquirer/user who is looking for a particular scene or shot, and an person-in-charge who manages the CCTV video collection. Now, in a carpark scenario, the inquirer would typically need to provide information such as time, date, color of the vehicle, vehicle registration number, and place of which an incident occurred. 
 
 Next, the person-in-charge would have to sift through hours and hours of video in order to find a distinct video shot. This process is undeniably time consuming, laborious, monotonous and tedious. While the task is potentially simpler and straightforward when there is only one video shot with clear-cut definitive time and date given, this process takes an enormous effort when the time and date is not given, or even in cases when all the video shots with similar properties are desired. 
 
@@ -13,6 +15,11 @@ Evidently, there exist a gap which can be addressed using a well designed retrie
 
 
 \subsection{Motivation and Problem Statements}
+
+In this section, the motivation behind this work is discussed in detail. With the recent hype around the term Industry 4.0 and Internet of Things, researchers around the world are scrambling in search for the next big thing that would impact the world. Likewise, in this work, the author delved into this work in hope of developing something that would be beneficial.
+
+
+
 
 \subsection{Research Objectives}
 
